--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "pitsftp",
   "displayName": "pitSftp",
   "description": "",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "publisher": "wuziyang",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wzydxb/pit-sftp.git"
+  },
   "icon": "logoq1.png",
   "engines": {
     "vscode": "^1.6.0"
@@ -26,7 +30,7 @@
       {
         "command": "pitsftp.inputPassWord",
         "title": "密码加密",
-        "category": "SFTP1"
+        "category": "pitSFTP"
       }
     ],
     "menus": {
@@ -59,10 +63,12 @@
     "@types/vscode": "^1.77.0",
     "@vscode/test-electron": "^2.3.0",
     "eslint": "^8.36.0",
+    "fs-extra": "^11.1.1",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "node-rsa": "^1.1.1",
     "ssh2-sftp-client": "^9.0.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.0"
   }
 }
